--- a/templates/item-modificationoutfit-sheet.html
+++ b/templates/item-modificationoutfit-sheet.html
@@ -13,7 +13,7 @@
           {{> "systems/foundry-fe2/templates/weapon-stats-section.html" stats=data.stats isbase=true title="Modification Stats" header=true}}
 
           <label class="generic-label">Description</label>
-          {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
+          {{editor system.description target="data.description" button=true owner=owner editable=editable}}
         </div>
 
     </section>
