--- a/templates/item-stronghit-sheet.html
+++ b/templates/item-stronghit-sheet.html
@@ -12,11 +12,11 @@
 
         <div class="tab" data-group="primary">
           <label class="generic-label">Description</label>
-          {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
+          {{editor system.description target="data.description" button=true owner=owner editable=editable}}
           <ul>
             <li class="flexrow"><label class="item-sheet-label">Requirements</label>
               <span class="small-editor item-text-long-line">
-              {{editor content=data.requirements target="data.requirements" button=true owner=owner editable=editable}}
+              {{editor system.requirements target="data.requirements" button=true owner=owner editable=editable}}
               </span>
             </li>
           </ul>
