--- a/templates/item-equipment-sheet.html
+++ b/templates/item-equipment-sheet.html
@@ -22,7 +22,7 @@
             </li>
           </ul>
           <label class="generic-label">Description</label>
-          {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
+          {{editor system.description target="data.description" button=true owner=owner editable=editable}}
         </div>
 
     </section>
