--- a/templates/item-spacecraftweapon-sheet.html
+++ b/templates/item-spacecraftweapon-sheet.html
@@ -51,7 +51,7 @@
           {{/each}}
         
           <h3>Description</h3>
-          {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
+          {{editor system.description target="data.description" button=true owner=owner editable=editable}}
         </div>
 
     </section>
